master : fix errores - add README.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Dayanna Zavarce
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
-spring.datasource.username=postgres
-spring.datasource.password=_M0beusJm0bile
+spring.datasource.url=jdbc:postgresql://localhost:5432/provincias_localidades
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.sql.init.platform=postgres
 # Data.sql
@@ -12,6 +12,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
-logging.file.name=/home/dayanna/Downloads/dayanna/log/dayanna.log
+logging.file.name=
 logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=7
